--- a/students/test/index.html
+++ b/students/test/index.html
@@ -241,6 +241,10 @@
                 <hr>
                 <!-- External links to social media/websites/etc-->
                 <p>External Links</p>
+                <ul> 
+                    <li><a href="https://www.youtube.com/watch?v=a219cU0m24Y">Youtube</a></li>
+                    <li><a href="https://r4k.buzz/dump-your-data.html">Artist's Website</a></li>
+                </ul>
             </div>
         </div>
     </div>
