--- a/students/test/index.html
+++ b/students/test/index.html
@@ -242,8 +242,8 @@
                 <!-- External links to social media/websites/etc-->
                 <p>External Links</p>
                 <ul> 
-                    <li><a href="https://www.youtube.com/watch?v=a219cU0m24Y">Youtube</a></li>
-                    <li><a href="https://r4k.buzz/dump-your-data.html">Artist's Website</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=a219cU0m24Y" target="_blank">Youtube</a></li>
+                    <li><a href="https://r4k.buzz/dump-your-data.html" target="_blank">Artist's Website</a></li>
                 </ul>
             </div>
         </div>
