--- a/students/test/index.html
+++ b/students/test/index.html
@@ -243,7 +243,7 @@
     optimize for web when saving to retain quality
     
     -videos should be uploaded to youtube and linked here by using Share>Embed
-    FOR VIDEOS <a href="#"> <img class="img-fluid" src="http://placehold.it/500x300" alt=""> is replaced by
+    FOR VIDEOS <a href="#"> <img class="img-fluid" src="http://placehold.it/500x300" alt=""> </a> is replaced by
 
     <div class="embed-responsive embed-responsive-16by9">
                     <iframe class="embed-responsive-item" width="560" height="315" src="LINK TO VIDEO" frameborder="1" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
