--- a/students/test/index.html
+++ b/students/test/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <!-- Local CSS -->
     <link rel="stylesheet" href="../../style.css">
     <link rel="stylesheet" href="../../individualpage.css">
@@ -21,10 +22,12 @@
 <body>
     <!--NAVBAR-->
     <nav class="navbar navbar-expand-lg navbar-6">
-        <a class="navbar-brand" href="../../group_page.html"> <img src="../../logo/Logo_Green-1.png" width="50" height="50" alt="">
+        <a class="navbar-brand" href="../../group_page.html"> <img src="../../logo/Logo_Green-1.png" width="50"
+                height="50" alt="">
         </a>
         <!-- Collapse button -->
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent15" aria-controls="navbarSupportedContent15" aria-expanded="false" aria-label="Toggle navigation"><span
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent15"
+            aria-controls="navbarSupportedContent15" aria-expanded="false" aria-label="Toggle navigation"><span
                 class="navbar-toggler-icon"></span></button>
         <!-- Collapsible content -->
         <div class="collapse navbar-collapse" id="navbarSupportedContent15">
@@ -46,153 +49,146 @@
     <div id="mySidebar" class="sidebar">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
         <a href="#">
-            <h6>Name, Surname</h6>
-            <h5>Title of Project</h5>
+            <h6>Agius Samuel</h6>
+            <h5>2D Fidelity in 3D Adaptation</h5>
         </a>
         <a href="#">
-            <h6>Name, Surname</h6>
-            <h5>Title of Project</h5>
+            <h6>Attard Oliver</h6>
+            <h5>Natural Phenomana in regards to Concept Art</h5>
         </a>
         <a href="#">
-            <h6>Name, Surname</h6>
-            <h5>Title of Project</h5>
+            <h6>Baldacchino Daniela</h6>
+            <h5>Nista' Niftakar?</h5>
         </a>
         <a href="#">
-            <h6>Name, Surname</h6>
-            <h5>Title of Project</h5>
+            <h6>Bugeja Chalise</h6>
+            <h5>Beyond - A Photographic Production</h5>
         </a>
         <a href="#">
-            <h6>Name, Surname</h6>
-            <h5>Title of Project</h5>
+            <h6>Calleja Luke</h6>
+            <h5>Surviving the War: An Interpretation of the Will of a Disappearing Generation</h5>
         </a>
         <a href="#">
-            <h6>Name, Surname</h6>
-            <h5>Title of Project</h5>
+            <h6>Camilleri Anne Marie</h6>
+            <h5>Videogame Concept Art</h5>
         </a>
         <a href="#">
-            <h6>Name, Surname</h6>
-            <h5>Title of Project</h5>
+            <h6>Casha Gayle</h6>
+            <h5>Disclosed Identity</h5>
         </a>
         <a href="#">
-            <h6>Name, Surname</h6>
-            <h5>Title of Project</h5>
+            <h6>Cassar Jeremy</h6>
+            <h5>Adapting Marouska Montebello’s Ir-Re Selfjun and other folktales</h5>
         </a>
         <a href="#">
-            <h6>Name, Surname</h6>
-            <h5>Title of Project</h5>
+            <h6>Cauchi Kezia</h6>
+            <h5>Dark Matter(s)</h5>
         </a>
         <a href="#">
-            <h6>Name, Surname</h6>
-            <h5>Title of Project</h5>
+            <h6>D’Amato Gaynor</h6>
+            <h5>RULED OUT</h5>
         </a>
         <a href="#">
-            <h6>Name, Surname</h6>
-            <h5>Title of Project</h5>
+            <h6>Degiorgio Maria</h6>
+            <h5>Restoring the Maltese Cultural Identity through Product Design</h5>
         </a>
         <a href="#">
-            <h6>Name, Surname</h6>
-            <h5>Title of Project</h5>
+            <h6>Falzon Francesca</h6>
+            <h5>Museum Chase</h5>
         </a>
         <a href="#">
-            <h6>Name, Surname</h6>
-            <h5>Title of Project</h5>
+            <h6>Galea Maria</h6>
+            <h5>The Changing Room - A Testiment to a Genderless Utopia </h5>
         </a>
         <a href="#">
-            <h6>Name, Surname</h6>
-            <h5>Title of Project</h5>
+            <h6>Gravino Adreana</h6>
+            <h5>Dress Code</h5>
         </a>
         <a href="#">
-            <h6>Name, Surname</h6>
-            <h5>Title of Project</h5>
+            <h6>Grech Neil</h6>
+            <h5>Lightshows & Improvisation in Performance</h5>
         </a>
         <a href="#">
-            <h6>Name, Surname</h6>
-            <h5>Title of Project</h5>
+            <h6>Grech Pirotta Hannah</h6>
+            <h5>paper bags.</h5>
         </a>
         <a href="#">
-            <h6>Name, Surname</h6>
-            <h5>Title of Project</h5>
+            <h6>Grima Braydon</h6>
+            <h5>Acknowledging Time</h5>
         </a>
         <a href="#">
-            <h6>Name, Surname</h6>
-            <h5>Title of Project</h5>
+            <h6>Hess Nina</h6>
+            <h5>Glued to our Phones - A Reflection on Today's Social Standarts</h5>
         </a>
         <a href="#">
-            <h6>Name, Surname</h6>
-            <h5>Title of Project</h5>
+            <h6>Inguanez Andrew</h6>
+            <h5>Bejn Sema u Ilma</h5>
         </a>
         <a href="#">
-            <h6>Name, Surname</h6>
-            <h5>Title of Project</h5>
+            <h6>Kaehler Lisa Marie</h6>
+            <h5>Creating an Appealing Audiovisual Advert through the Art of Stop Motion Animation</h5>
         </a>
         <a href="#">
-            <h6>Name, Surname</h6>
-            <h5>Title of Project</h5>
+            <h6>Laferla Sergio</h6>
+            <h5>Ha!</h5>
         </a>
         <a href="#">
-            <h6>Name, Surname</h6>
-            <h5>Title of Project</h5>
+            <h6>Longo Francesca</h6>
+            <h5>Beyond the Surface</h5>
         </a>
         <a href="#">
-            <h6>Name, Surname</h6>
-            <h5>Title of Project</h5>
+            <h6>Micallef Bjorn</h6>
+            <h5>Animals as Humans - The History of an Alternate World</h5>
         </a>
         <a href="#">
-            <h6>Name, Surname</h6>
-            <h5>Title of Project</h5>
+            <h6>Micallef Giulia</h6>
+            <h5>An Even Bigger Splash</h5>
         </a>
         <a href="#">
-            <h6>Name, Surname</h6>
-            <h5>Title of Project</h5>
+            <h6>Micallef Jerome</h6>
+            <h5>Micro-Dwellings for Student Housing</h5>
         </a>
         <a href="#">
-            <h6>Name, Surname</h6>
-            <h5>Title of Project</h5>
+            <h6>Polidano Emanuel</h6>
+            <h5>Human in Post Art</h5>
         </a>
         <a href="#">
-            <h6>Name, Surname</h6>
-            <h5>Title of Project</h5>
+            <h6>Rizzo Luigi</h6>
+            <h5>QUAD - Colour Your Workout</h5>
         </a>
         <a href="#">
-            <h6>Name, Surname</h6>
-            <h5>Title of Project</h5>
+            <h6>Saliba Jacob</h6>
+            <h5>Seeking Gesamtkunstwerk</h5>
         </a>
         <a href="#">
-            <h6>Name, Surname</h6>
-            <h5>Title of Project</h5>
+            <h6>Scerri Vincianne</h6>
+            <h5>Let's Find Freshwater Crabs!</h5>
         </a>
         <a href="#">
-            <h6>Name, Surname</h6>
-            <h5>Title of Project</h5>
+            <h6>Seychell Amber</h6>
+            <h5>Vis à vis</h5>
         </a>
         <a href="#">
-            <h6>Name, Surname</h6>
-            <h5>Title of Project</h5>
+            <h6>Tobin Madeleine</h6>
+            <h5>Evil Within: An Illustrated Guide to the Cambodian Genocide</h5>
         </a>
         <a href="#">
-            <h6>Name, Surname</h6>
-            <h5>Title of Project</h5>
+            <h6>Vella Francesco</h6>
+            <h5>Unconscious Realities</h5>
         </a>
         <a href="#">
-            <h6>Name, Surname</h6>
-            <h5>Title of Project</h5>
+            <h6>Vella Rakel</h6>
+            <h5>The Glass Room</h5>
         </a>
         <a href="#">
-            <h6>Name, Surname</h6>
-            <h5>Title of Project</h5>
+            <h6>Venables Emma</h6>
+            <h5>The Swing Set Senses</h5>
         </a>
         <a href="#">
-            <h6>Name, Surname</h6>
-            <h5>Title of Project</h5>
+            <h6>Zarb Celine</h6>
+            <h5>Peter Pan: An Adventure Through Time</h5>
         </a>
-        <a href="#">
-            <h6>Name, Surname</h6>
-            <h5>Title of Project</h5>
-        </a>
-        <a href="#">
-            <h6>Name, Surname</h6>
-            <h5>Title of Project</h5>
-        </a>
+
     </div>
     <!--Sticky Sidebar Arrow-->
     <img class="img-sticky" onclick="openNav()" src="../../images/left_arro.svg" alt="sidebar arrow">
@@ -205,7 +201,8 @@
     -gifs are accepted as well-->
     <div class="container-fluid">
         <div class="row">
-            <div data-aos="zoom-in" data-aos-duration="1000" class="col-md-7 d-flex align-items-center justify-content-center">
+            <div data-aos="zoom-in" data-aos-duration="1000"
+                class="col-md-7 d-flex align-items-center justify-content-center">
                 <!-- MAIN PROJECT IMAGE, square format 1:1-->
                 <img class="img-fluid" src="http://placehold.it/500x500" alt="MAIN PROJECT IMAGE">
             </div>
@@ -213,7 +210,8 @@
                 <div class="row">
                     <div class="col d-flex align-items-center justify-content-around">
                         <!-- PERSONAL IMAGE, crop your exhibition photo and insert here-->
-                        <img class="img-fluid rounded-circle profile_picture" src="http://placehold.it/150x150" alt="PERSONAL IMAGE">
+                        <img class="img-fluid rounded-circle profile_picture" src="http://placehold.it/150x150"
+                            alt="PERSONAL IMAGE">
                         <!--Change your name and surname here-->
                         <h3>Name Surname</h3>
                     </div>
@@ -221,10 +219,18 @@
                 <!--Change your project name here-->
                 <h2>Project Name</h2>
                 <!--Change you project description here, max 150 words-->
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis
-                    enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat,
-                    felis enim.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis
-                    placerat, felis enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida
+                    pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus.
+                    Mauris ultricies, justo eu convallis placerat, felis
+                    enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida
+                    pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus.
+                    Mauris ultricies, justo eu convallis placerat,
+                    felis enim.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio,
+                    gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec
+                    metus. Mauris ultricies, justo eu convallis
+                    placerat, felis enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod
+                    odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum
+                    nec metus. Mauris ultricies, justo
                     eu convallis placerat, felis enim.</p>
                 <hr>
                 <!-- External links to social media/websites/etc-->
@@ -327,9 +333,15 @@
         }
     </script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js " integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n " crossorigin="anonymous "></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js " integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo " crossorigin="anonymous "></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js " integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6 " crossorigin="anonymous "></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js "
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n "
+        crossorigin="anonymous "></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js "
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo "
+        crossorigin="anonymous "></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js "
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6 "
+        crossorigin="anonymous "></script>
 </body>
 
 </html>
