--- a/students/test/index.html
+++ b/students/test/index.html
@@ -48,143 +48,143 @@
     <!--SIDEBAR-->
     <div id="mySidebar" class="sidebar">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-        <a href="#">
+        <a href="students/samuel_agius/index.html">
             <h6>Agius Samuel</h6>
             <h5>2D Fidelity in 3D Adaptation</h5>
         </a>
-        <a href="#">
+        <a href="students/oliver_attard/index.html">
             <h6>Attard Oliver</h6>
             <h5>Natural Phenomana in regards to Concept Art</h5>
         </a>
-        <a href="#">
+        <a href="students/daniela_baldacchino/index.html">
             <h6>Baldacchino Daniela</h6>
             <h5>Nista' Niftakar?</h5>
         </a>
-        <a href="#">
+        <a href="students/chalise_bugeja/index.html">
             <h6>Bugeja Chalise</h6>
             <h5>Beyond - A Photographic Production</h5>
         </a>
-        <a href="#">
+        <a href="students/luke_calleja/index.html">
             <h6>Calleja Luke</h6>
             <h5>Surviving the War: An Interpretation of the Will of a Disappearing Generation</h5>
         </a>
-        <a href="#">
+        <a href="students/anne_marie_camilleri/index.html">
             <h6>Camilleri Anne Marie</h6>
             <h5>Videogame Concept Art</h5>
         </a>
-        <a href="#">
+        <a href="students/gayle_casha/index.html">
             <h6>Casha Gayle</h6>
             <h5>Disclosed Identity</h5>
         </a>
-        <a href="#">
+        <a href="students/jeremy_cassar/index.html">
             <h6>Cassar Jeremy</h6>
             <h5>Adapting Marouska Montebello’s Ir-Re Selfjun and other folktales</h5>
         </a>
-        <a href="#">
+        <a href="students/kezia_cauchi/index.html">
             <h6>Cauchi Kezia</h6>
             <h5>Dark Matter(s)</h5>
         </a>
-        <a href="#">
+        <a href="students/gaynor_d-amato/index.html">
             <h6>D’Amato Gaynor</h6>
             <h5>RULED OUT</h5>
         </a>
-        <a href="#">
+        <a href="students/maria_degiorgio/index.html">
             <h6>Degiorgio Maria</h6>
             <h5>Restoring the Maltese Cultural Identity through Product Design</h5>
         </a>
-        <a href="#">
+        <a href="students/francesca_falzon/index.html">
             <h6>Falzon Francesca</h6>
             <h5>Museum Chase</h5>
         </a>
-        <a href="#">
+        <a href="students/maria_galea/index.html">
             <h6>Galea Maria</h6>
             <h5>The Changing Room - A Testiment to a Genderless Utopia </h5>
         </a>
-        <a href="#">
+        <a href="students/adreana_gravino/index.html">
             <h6>Gravino Adreana</h6>
             <h5>Dress Code</h5>
         </a>
-        <a href="#">
+        <a href="students/neil_Grech/index.html">
             <h6>Grech Neil</h6>
             <h5>Lightshows & Improvisation in Performance</h5>
         </a>
-        <a href="#">
+        <a href="students/hannah_grech_pirotta/index.html">
             <h6>Grech Pirotta Hannah</h6>
             <h5>paper bags.</h5>
         </a>
-        <a href="#">
+        <a href="students/braydon_grima/index.html">
             <h6>Grima Braydon</h6>
             <h5>Acknowledging Time</h5>
         </a>
-        <a href="#">
+        <a href="students/nina_hess/index.html">
             <h6>Hess Nina</h6>
             <h5>Glued to our Phones - A Reflection on Today's Social Standarts</h5>
         </a>
-        <a href="#">
+        <a href="students/andrew_inguanez/index.html">
             <h6>Inguanez Andrew</h6>
             <h5>Bejn Sema u Ilma</h5>
         </a>
-        <a href="#">
+        <a href="students/lisa_kaehler_m/index.html">
             <h6>Kaehler Lisa Marie</h6>
             <h5>Creating an Appealing Audiovisual Advert through the Art of Stop Motion Animation</h5>
         </a>
-        <a href="#">
+        <a href="students/sergio_laferla/index.html">
             <h6>Laferla Sergio</h6>
             <h5>Ha!</h5>
         </a>
-        <a href="#">
+        <a href="students/francesca_longo/index.html">
             <h6>Longo Francesca</h6>
             <h5>Beyond the Surface</h5>
         </a>
-        <a href="#">
+        <a href="students/bjorn_micallef/index.html">
             <h6>Micallef Bjorn</h6>
             <h5>Animals as Humans - The History of an Alternate World</h5>
         </a>
-        <a href="#">
+        <a href="students/giulia_micallef/index.html">
             <h6>Micallef Giulia</h6>
             <h5>An Even Bigger Splash</h5>
         </a>
-        <a href="#">
+        <a href="students/jerome_micallef/index.html">
             <h6>Micallef Jerome</h6>
             <h5>Micro-Dwellings for Student Housing</h5>
         </a>
-        <a href="#">
+        <a href="students/emanuel_polidano/index.html">
             <h6>Polidano Emanuel</h6>
             <h5>Human in Post Art</h5>
         </a>
-        <a href="#">
+        <a href="students/luigi_rizzo/index.html">
             <h6>Rizzo Luigi</h6>
             <h5>QUAD - Colour Your Workout</h5>
         </a>
-        <a href="#">
+        <a href="students/jacob_saliba/index.html">
             <h6>Saliba Jacob</h6>
             <h5>Seeking Gesamtkunstwerk</h5>
         </a>
-        <a href="#">
+        <a href="students/vincianne_scerri/index.html">
             <h6>Scerri Vincianne</h6>
             <h5>Let's Find Freshwater Crabs!</h5>
         </a>
-        <a href="#">
+        <a href="students/amber_seychell/index.html">
             <h6>Seychell Amber</h6>
             <h5>Vis à vis</h5>
         </a>
-        <a href="#">
+        <a href="students/madeleine_tobin/index.html">
             <h6>Tobin Madeleine</h6>
             <h5>Evil Within: An Illustrated Guide to the Cambodian Genocide</h5>
         </a>
-        <a href="#">
+        <a href="students/francesco_vella/index.html">
             <h6>Vella Francesco</h6>
             <h5>Unconscious Realities</h5>
         </a>
-        <a href="#">
+        <a href="students/rakel_vella/index.html">
             <h6>Vella Rakel</h6>
             <h5>The Glass Room</h5>
         </a>
-        <a href="#">
+        <a href="students/emma_venables/index.html">
             <h6>Venables Emma</h6>
             <h5>The Swing Set Senses</h5>
         </a>
-        <a href="#">
+        <a href="students/celine_zarb/index.html">
             <h6>Zarb Celine</h6>
             <h5>Peter Pan: An Adventure Through Time</h5>
         </a>
