--- a/students/test/index.html
+++ b/students/test/index.html
@@ -213,7 +213,7 @@
                         <img class="img-fluid rounded-circle profile_picture" src="http://placehold.it/150x150"
                             alt="PERSONAL IMAGE">
                         <!--Change your name and surname here-->
-                        <h3>Name Surname</h3>
+                        <h3>Ryan Sammut</h3>
                     </div>
                 </div>
                 <!--Change your project name here-->
