--- a/students/test/index.html
+++ b/students/test/index.html
@@ -210,7 +210,7 @@
                 <div class="row">
                     <div class="col d-flex align-items-center justify-content-around">
                         <!-- PERSONAL IMAGE, crop your exhibition photo and insert here-->
-                        <img class="img-fluid rounded-circle profile_picture" src="http://placehold.it/150x150"
+                        <img class="img-fluid rounded-circle profile_picture" src="profile_picture.png"
                             alt="PERSONAL IMAGE">
                         <!--Change your name and surname here-->
                         <h3>Ryan Sammut</h3>
