--- a/students/test/index.html
+++ b/students/test/index.html
@@ -204,7 +204,7 @@
             <div data-aos="zoom-in" data-aos-duration="1000"
                 class="col-md-7 d-flex align-items-center justify-content-center">
                 <!-- MAIN PROJECT IMAGE, square format 1:1-->
-                <img class="img-fluid" src="http://placehold.it/500x500" alt="MAIN PROJECT IMAGE">
+                <img class="img-fluid" src="main_image.png" alt="MAIN PROJECT IMAGE">
             </div>
             <div class="col-md-5 project-info col-xl-4">
                 <div class="row">
