--- a/students/test/index.html
+++ b/students/test/index.html
@@ -260,7 +260,7 @@
     <div data-aos="fade-up" class="container-fluid container-3">
         <div class="row d-flex align-items-center justify-content-center">
             <div class="col-md-3 col-sm-6 mb-4 d-flex justify-content-center">
-                <a href="#"> <img class="img-fluid" src="http://placehold.it/200x300" alt=""> </a>
+                <a href="https://www.youtube.com/channel/UCzh1FuIFn6OBPgetx5RlPrA"> <img class="img-fluid" src="livestream.png" alt=""> </a>
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex justify-content-center">
                 <a href="#"> <img class="img-fluid" src="http://placehold.it/500x300" alt=""> </a>
