--- a/students/test/index.html
+++ b/students/test/index.html
@@ -263,7 +263,7 @@
                 <a href="https://www.youtube.com/channel/UCzh1FuIFn6OBPgetx5RlPrA"> <img class="img-fluid" src="livestream.png" alt=""> </a>
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex justify-content-center">
-                <a href="#"> <img class="img-fluid" src="http://placehold.it/500x300" alt=""> </a>
+                <img class="img-fluid" src="V_5.png" alt="">
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex justify-content-center">
                 <a href="#"> <img class="img-fluid" src="http://placehold.it/300x300" alt=""> </a>
