--- a/students/test/index.html
+++ b/students/test/index.html
@@ -204,7 +204,7 @@
             <div data-aos="zoom-in" data-aos-duration="1000"
                 class="col-md-7 d-flex align-items-center justify-content-center">
                 <!-- MAIN PROJECT IMAGE, square format 1:1-->
-                <img class="img-fluid" src="main_image.png" alt="MAIN PROJECT IMAGE">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/ZQ8714i3XiM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div class="col-md-5 project-info col-xl-4">
                 <div class="row">
