--- a/students/test/index.html
+++ b/students/test/index.html
@@ -269,7 +269,7 @@
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/ZQ8714i3XiM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div class="col-md-3 col-sm-6 mb-4 d-flex justify-content-center">
-                <a href="#"> <img class="img-fluid" src="http://placehold.it/500x300" alt=""> </a>
+                <a href="#"> <img class="img-fluid" src="main_image.png" alt=""> </a>
             </div>
         </div>
         <div class="row d-flex align-items-center">
